# server/pkg/handlers/responses.go
@@ -3,3 +3,11 @@ package handlers
 type HealthResponse struct {
 	Database bool `json:"database"`
 }
+
+type AuthResponse struct {
+	Token string `json:"token"`
+}
+
+type GenericErrorResponse struct {
+	Message string `json:"message"`
+}
